--- a/hugo.toml
+++ b/hugo.toml
@@ -24,6 +24,11 @@ theme = 'zat'
     pageRef = '/tags'
     weight = 30
 
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
+
 [module]
   [module.hugoVersion]
     extended = false
